# codrik

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  agent_instructions.md
.codrik/builtin-skills/skill-creator/: SKILL.md
.superpowers/sdd/: final-fix-report.md  task-10-report.md  task-11-report.md  task-12-report.md  task-13-report.md  task-7-report.md  task-8-report.md  task-9-report.md
docs/superpowers/plans/: 2026-07-06-skills-runtime.md  2026-07-11-telegram-session-superseding-runs.md  2026-07-12-builtin-skill-creator.md  2026-07-12-unbounded-agent-loop-telegram-activity.md  2026-07-13-bash-workspace-default-cwd.md  2026-07-13-bashkit-agent-features.md  2026-07-13-multimodal-file-attachments.md  2026-07-14-codrik-serve-local-ipc.md  2026-07-14-durable-local-kernel.md  2026-07-16-config-readme-documentation.md  2026-07-16-identity-linking-core.md  2026-07-16-sqlite-actor-bootstrap.md  2026-07-16-telegram-activity-ux.md  2026-07-16-telegram-rich-markdown.md  2026-07-16-telegram-webhook-gateway.md  2026-07-17-service-restart.md  2026-07-18-actor-administration.md  2026-07-18-telegram-polling.md
docs/superpowers/specs/: 2026-07-11-telegram-session-superseding-runs-design.md  2026-07-12-builtin-skill-creator-design.md  2026-07-12-unbounded-agent-loop-telegram-activity-design.md  2026-07-13-bash-workspace-default-cwd-design.md  2026-07-13-bashkit-agent-features-design.md  2026-07-13-multimodal-file-attachments-design.md  2026-07-14-codrik-serve-local-ipc-design.md  2026-07-14-persistent-actor-runtime-design.md  2026-07-16-config-readme-documentation-design.md  2026-07-16-identity-linking-core-design.md  2026-07-16-sqlite-actor-bootstrap-design.md  2026-07-16-telegram-activity-ux-design.md  (+5 more)
scripts/: install.sh  release.sh
src/: agent.rs  app.rs  auth.rs  config.rs  interfaces.rs  lib.rs  main.rs  memory.rs  runtime.rs  skills.rs  test_fixtures.rs  tools.rs  updater.rs
src/agent/: agent_loop.rs  message.rs  tool.rs  tool_observation.rs
src/app/: session_deletion.rs
src/interfaces/: cli.rs  local_renderer.rs  request_metadata.rs  telegram.rs
src/llm/: client.rs  openai.rs
src/memory/: attachments.rs  file.rs  in_memory.rs  provider_files.rs  store.rs  telegram_sessions.rs
src/runtime/: actor_admin.rs  artifacts.rs  dispatcher.rs  gateway.rs  gateway_activity.rs  hooks.rs  identity_link.rs  instance_lock.rs  ipc.rs  model.rs  observability.rs  outbox_worker.rs  runner.rs  service.rs  signals.rs  sqlite.rs  store.rs  stream_hub.rs  supervisor.rs
src/skills/: builtin.rs
src/tools/: bash.rs  bashkit.rs  datetime.rs  send_file.rs  skills.rs  web_browser.rs
tests/: install_script.rs  release_script.rs  serve_runtime.rs
(+41 files in other folders)
