[package]
name = "codrik"
version = "0.3.5"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.1", features = ["chat-completion"] }
async-trait = "0.1.89"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "ctrlc_handler"] }
tokio = { version = "1.52.3", features = ["full"] }
yaml_serde = "0.10.4"
