[package]
name = "codrik"
version = "0.3.15"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.1", features = ["responses", "file"] }
async-trait = "0.1.89"
bashkit = { version = "0.12.0", features = ["realfs"] }
base64 = "0.22"
bytes = "1.11"
futures-util = "0.3.31"
infer = "0.19"
libc = "0.2.186"
obscura = { git = "https://github.com/h4ckf0r0day/obscura", rev = "ca71ce3c2da9a244c6d05a5d68fafcc5a14eecd8", features = ["api"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
telegram-markdown-v2 = "0.2.0"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "ctrlc_handler"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.17"
yaml_serde = "0.10.4"
