[package]
name = "codrik"
version = "0.4.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.1", features = ["responses", "file"] }
async-trait = "0.1.89"
axum = "0.8"
bashkit = { version = "0.12.0", features = ["realfs", "http_client", "jq", "git"] }
base64 = "0.22"
bytes = "1.11"
futures-util = "0.3.31"
fs2 = "0.4"
getrandom = "0.3.4"
infer = "0.19"
libc = "0.2.186"
obscura = { git = "https://github.com/h4ckf0r0day/obscura", rev = "ca71ce3c2da9a244c6d05a5d68fafcc5a14eecd8", features = ["api"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "multipart", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
sha2 = "0.10"
subtle = "2.6"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
tokio-util = { version = "0.7.17", features = ["io"] }
url = "2.5"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
yaml_serde = "0.10.4"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["test-util"] }
